k8s/k8singress/testappingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-ingress
  namespace: test-app-development
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
        - inventory.bprof2.gesz.dev
        - order.bprof2.gesz.dev
        - db.bprof2.gesz.dev
      secretName: app-test-cert
  rules:
    - host: inventory.bprof2.gesz.dev
      http:
        paths:
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: inventorymicroservice-service
              port:
                number: 5000
    - host: order.bprof2.gesz.dev
      http:
        paths:
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: ordermicroservice-service
              port:
                number: 5001
    - host: db.bprof2.gesz.dev
      http:
        paths:
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: eventstoredb-service
              port:
                number: 2113
